dev/monitoring/ingresses/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dp-001-app-dev
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
    alb.ingress.kubernetes.io/success-codes: "200"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:381443105190:certificate/8c7b8504-192e-41e4-8e4d-42e6f828e1c5
    alb.ingress.kubernetes.io/inbound-cidrs: 0.0.0.0/0
    alb.ingress.kubernetes.io/manage-backend-security-group-rules: true
spec:
  ingressClassName: alb
  rules:
    - host: dp-001-app.dev.lmv-dev.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dp-001-app
                port:
                  number: 3000


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /login
    alb.ingress.kubernetes.io/success-codes: "200"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:381443105190:certificate/8c7b8504-192e-41e4-8e4d-42e6f828e1c5
    alb.ingress.kubernetes.io/inbound-cidrs: 0.0.0.0/0
    alb.ingress.kubernetes.io/manage-backend-security-group-rules: true
spec:
  ingressClassName: alb
  rules:
    - host: grafana.dev.lmv-dev.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
